--- a/index.html
+++ b/index.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-
+    <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
+    <link rel="stylesheet" href="node_modules/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body ng-app="angularApp" ng-controller="classifiedsCtrl">
 
-    <hello-world></hello-world>
+    <md-toolbar>
+        <div class="md-toolbar-tools">
+            <p><strong>ngClassifieds</strong></p>
+            <md-button>
+                <md-icon class="mdi mdi-plus-circle"></md-icon>
+                New Classified
+            </md-button>
+        </div>
+    </md-toolbar>
 
+    <md-content class="md-padding" layout="row" layout-wrap>
+        <md-card ng-repeat="classifide in classifides" flex="30">
+            <img ng-src="{{ classifide.image }}" alt="">
+            <md-card-content>
+                <div class="classifide-info">
+                    <h2 class="md-tittle">{{ classifide.title }}</h2>
+                    <h2>{{ classifide.posted | date:'longDate' }}</h2>
+                    <h3>{{ classifide.price | currency }}</h3>
+                    <p>{{ classifide.description }}</p>
+                </div>
+            </md-card-content>
+        </md-card>
+    </md-content>
+    
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-animate/angular-animate.js"></script>
     <script src="node_modules/angular-aria/angular-aria.js"></script>
